<resources>
    <string name="app_name">GeoLoc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish_onboarding">Get Started</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="email_place">Email address</string>
    <string name="Password_place">Password</string>
    <string name="logo">logo</string>
    <string name="login_message">Don\'t have an account? </string>
    <string name="sign_up_button">Sign up</string>
    <string name="forgot">Forgot password?</string>
    <string name="CheckBox">Remember me</string>
    <string name="sign_in_button">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_for_free">Sign up for free</string>
    <string name="username">Username</string>
    <string name="name_place">Username</string>
    <string name="erreur_message">erreur message</string>
    <string name="award">Award</string>
    <string name="forward">Forward</string>
    <string name="text_onboard3">Nous produisons pour vous un recapitulatif de tous les trajets effectués par votre vehicule</string>
    <string name="text_onboard1">Ayez en temps et en heure tous les trajets effectués par votre véhicule</string>
    <string name="text_onboard2">Obtenez en un seul clique la localisation en temps réelle de votre véhicule</string>
    <string name="get">Get Started</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_message">Have you an account ?</string>
    <string name="auth_failed">Authentificated Failed</string>
    <string name="auth_success">Account Created</string>
    <string name="car">Car</string>
    <string name="profile">Profile</string>
    <string name="historique">Historique</string>
    <string name="home">Home</string>
    <string name="address">Address</string>
    <string name="add_information">Add Information</string>
    <string name="douala_yassa_cameroun">Douala, Yassa Cameroun</string>
    <string name="casa_face_lgm">Casa Face LGM</string>
    <string name="mobile">Mobile</string>
    <string name="_237_659_38_96_49">+237 659 38 96 49</string>
    <string name="geoloc237_gmail_com">geoloc237@gmail.com</string>
    <string name="geoloc_237">Geoloc 237</string>
    <string name="personal_info">Personal Info</string>
    <string name="family">Family</string>
</resources>