<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="#fff">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:padding="1dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_person"
                    android:padding="1dp"/>
                <TextView
                        android:text="@string/address"
                        android:textStyle="bold|normal"
                        android:textSize="16sp"
                        android:textColor="#000"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:padding="1dp"
                    android:orientation="horizontal">
                <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_add"
                        android:padding="1dp"/>
                <TextView
                        android:text="@string/add_information"
                        android:textStyle="bold|normal"
                        android:textSize="16sp"
                        android:textColor="#2B6DC2"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout 
                android:orientation="horizontal"
                android:layout_width="match_parent" 
                android:layout_height="wrap_content">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="2dp"
                android:layout_marginStart="10dp"
                app:tint="@color/black"
                android:src="@drawable/house"/>
            <TextView
                android:text="@string/douala_yassa_cameroun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:text="@string/casa_face_lgm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#ED5E5E5E"
                android:textStyle="bold"
                android:gravity="center"
                android:textAlignment="textStart"
                tools:ignore="RtlCompat"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>