<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_centerInParent="true"
         android:gravity="center"
 >
    <RelativeLayout

            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="250dp">
        <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">
            <LinearLayout
                    android:layout_marginTop="23dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff">
                <TextView
                        android:text="@string/geoloc_237"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="PID : 659389649"
                        android:textSize="13sp"
                        android:textStyle="normal"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textColor="#5C5A5A"
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <View
                        android:background="#5C5A5A"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:weightSum="3"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                    >
                    <TextView
                            android:layout_weight="1"
                            android:text="@string/personal_info"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    <View
                            android:background="#5C5A5A"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>
                    <TextView
                            android:layout_weight="1"
                            android:text="@string/historique"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="#636262"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    <View
                            android:background="#5C5A5A"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"/>
                    <TextView
                            android:layout_weight="1"
                            android:text="@string/family"
                            android:gravity="center"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="#636262"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <com.google.android.material.imageview.ShapeableImageView
            android:src="@drawable/ic_person"
            app:shapeAppearance="@style/circular"
            android:elevation="15dp"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            android:layout_width="98dp"
            android:layout_height="98dp"/>
</RelativeLayout>