<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterFragment"
    android:background="@drawable/bg_app">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="118dp"
        android:layout_height="121dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="143dp"
        android:background="@mipmap/logo_foreground"
        android:textAppearance="@style/logo" />

    <View
        android:id="@+id/form_contain"
        android:layout_width="435dp"
        android:layout_height="565dp"
        android:background="@drawable/onboarding_bg"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="255dp"
        android:layout_height="33dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="194dp"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textColor="#1BBCE6"
        android:fontFamily="@font/nunito"
        android:textAppearance="@style/sign_in" />

    <TextView
        android:id="@+id/email"
        android:layout_width="105dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="38dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="303dp"
        android:text="@string/email"
        android:textColor="#fff"
        android:textSize="16sp"
        android:fontFamily="@font/nunito"
        android:textAppearance="@style/label"
        android:gravity="center_horizontal|top"
        />

    <LinearLayout
        android:id="@+id/input1"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_below="@+id/email"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:gravity="center">

        <TextView
            android:id="@+id/email_placeholder"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="left|center"
            android:paddingLeft="25dp"
            android:text=""
            android:textColor="#8A7B7B" />
    </LinearLayout>

    <TextView
        android:id="@+id/password"
        android:layout_width="73dp"
        android:layout_height="22dp"
        android:layout_below="@+id/input1"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal|top"
        android:text="@string/password"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textAppearance="@style/label" />

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="355dp"
        android:layout_height="60dp"
        android:layout_below="@+id/password"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input_bg"
        android:gravity="center">

        <TextView
            android:id="@+id/password_placeholder"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:gravity="left|center"
            android:paddingLeft="15dp"
            android:hint="@string/Password_placeholder"
            android:text=""
            android:textColor="#8A7B7B" />

        <ImageSwitcher
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/eye_slash"/>
    </LinearLayout>

</RelativeLayout>